# owl

./: .github-export-ignore  .gitignore  AGENT.md  BUILD.gn  README.md
bridge/: AGENT.md  BUILD.gn  Info.plist  OWLBridgeBrowserContext.h  OWLBridgeBrowserContext.mm  OWLBridgeSession.h  OWLBridgeSession.mm  OWLBridgeTypes.h  OWLBridgeTypes.mm  OWLBridgeWebView.h  OWLBridgeWebView.mm  OWLMojoThread.h  OWLMojoThread.mm  OWLProcessLauncher.h  OWLProcessLauncher.mm  OWLRemoteLayerView.h  OWLRemoteLayerView.mm  exports.txt  module.modulemap  owl_bridge_api.cc  owl_bridge_api.h  owl_bridge_browser_context_unittest.mm  owl_bridge_console_unittest.mm  owl_bridge_download_unittest.mm  owl_bridge_memory_safety_unittest.mm  owl_bridge_navigation_unittest.mm  owl_bridge_permission_unittest.mm  owl_bridge_session_unittest.mm  owl_bridge_types_unittest.mm  owl_bridge_web_view_unittest.mm  owl_mojo_thread_unittest.mm  owl_process_launcher_unittest.mm  owl_remote_layer_view_unittest.mm
client/: AGENT.md  BUILD.gn  OWLAIChatSession.h  OWLAIChatSession.mm  OWLAIMessage.h  OWLAIMessage.mm  OWLAddressBarController.h  OWLAddressBarController.mm  OWLAgentSession.h  OWLAgentSession.mm  OWLBrowserMemory.h  OWLBrowserMemory.mm  OWLInputTranslator.h  OWLInputTranslator.mm  OWLShortcutManager.h  OWLShortcutManager.mm  OWLTab.h  OWLTab.mm  OWLTabManager.h  OWLTabManager.mm  OWLWebContentView.h  OWLWebContentView.mm  owl_address_bar_controller_unittest.mm  owl_agent_session_unittest.mm  owl_ai_chat_session_unittest.mm  owl_browser_memory_unittest.mm  owl_input_translator_unittest.mm  owl_shortcut_manager_unittest.mm  owl_tab_manager_unittest.mm  owl_web_content_view_unittest.mm
docs/: AGENT.md  ARCHITECTURE.md  BACKLOG.md  CONVENTIONS.md  GITHUB_FIRST_PUSH_ORDER.md  GITHUB_UPLOAD_PLAN.md  TESTING-LEARNINGS.md  TESTING-ROADMAP.md  TESTING.md  harness-openai-alignment-2026-04-09.md  testing-harness-coverage-audit-2026-04-09.md
docs/bug-hunt/: architecture-review-2026-04-07.md
docs/design/: agent-api-layer.md  agent-testing-infrastructure.md  flow-v2-gan-redesign.md
docs/modules/: AGENT.md  README.md  module-a-history.md  module-b-downloads.md  module-c-permissions.md  module-d-storage.md  module-e-context-menu.md  module-f-navigation-events.md  module-g-console.md  module-h-tabs.md  module-i-settings.md  module-j-print.md  module-k-network.md  module-l-media.md
docs/prd/: arch-bugfix-28.md  console-capture.md  context-menu.md  download-manager.md  multi-tab.md  navigation-events.md  owl-cli.md  permissions.md  ui-atlas-alignment.md  unified-observer-lifecycle.md
docs/retrospective/: context-menu.md
host/: AGENT.md  BUILD.gn  DEPS  OWNERS  app-Info.plist  framework-Info.plist  helper-Info.plist  owl_application_mac.h  owl_application_mac.mm  owl_bookmark_service.cc  owl_bookmark_service.h  owl_bookmark_service_unittest.cc  owl_bridge_download_cabi_unittest.cc  owl_browser_context.cc  owl_browser_context.h  owl_browser_context_unittest.cc  owl_browser_context_unittest.cc.bak  owl_browser_impl.cc  owl_browser_impl.h  owl_browser_impl_unittest.cc  owl_browser_main_parts.cc  owl_browser_main_parts.h  owl_content_browser_client.cc  owl_content_browser_client.h  owl_content_browser_context.cc  owl_content_browser_context.h  owl_content_gpu_client.h  owl_content_main.mm  owl_content_renderer_client.h  owl_content_utility_client.h  owl_context_menu_unittest.cc  owl_context_menu_utils.cc  owl_context_menu_utils.h  owl_download_manager_delegate.h  owl_download_manager_delegate.mm  owl_download_service.cc  owl_download_service.h  owl_download_service_unittest.cc  owl_framework_main.cc  owl_history_service.cc  (+30 more)
mojom/: AGENT.md  BUILD.gn  bookmarks.mojom  browser_context.mojom  downloads.mojom  history.mojom  owl_input_types.mojom  owl_types.mojom  permissions.mojom  session.mojom  storage.mojom  web_view.mojom
owl-client-app/: AGENT.md  Package.swift  project.yml
owl-client-app/App/: AppDelegate.swift  OWLBrowserApp.swift
owl-client-app/CLI/: CLIMain.swift  CLISocketClient.swift
owl-client-app/Models/: AuthChallenge.swift  CLIProtocol.swift  ConsoleItem.swift  ContextMenuParams.swift  DownloadItem.swift  NavigationError.swift  NavigationEventRing.swift  TimeParser.swift
owl-client-app/OWLBrowser.xcodeproj/: project.pbxproj
owl-client-app/Resources/: Info.plist
owl-client-app/Services/: AIService.swift  BookmarkService.swift  CLICommandRouter.swift  CLISocketServer.swift  ContextMenuBridge.swift  ContextMenuHandler.swift  DownloadBridge.swift  DownloadService.swift  HistoryBridge.swift  HistoryService.swift  OWLBridgeSwift.swift  PermissionBridge.swift  SSLBridge.swift  SessionRestoreService.swift  StorageService.swift
owl-client-app/TestKit/: AppHost.swift  ProcessGuard.swift  WaitHelper.swift
owl-client-app/Tests/: OWLBrowserTests.swift  OWLSystemEventTests.swift  OWLTestBridge.swift
owl-client-app/UITests/: ContextMenuUITests.swift  OWLBrowserUITests.swift  OWLConsoleUITests.swift  OWLDownloadUITests.swift  OWLDualDriverTests.swift  OWLHistoryUITests.swift  OWLNavigationUITests.swift  OWLTabManagementUITests.swift  TestDownloadHTTPServer.swift  UITests.entitlements
owl-client-app/ViewModels/: AIChatViewModel.swift  AddressBarViewModel.swift  BookmarkViewModel.swift  BrowserViewModel.swift  ConsoleViewModel.swift  DownloadViewModel.swift  HistoryViewModel.swift  PermissionViewModel.swift  SecurityViewModel.swift  SettingsPermissionsViewModel.swift  StorageViewModel.swift  TabViewModel.swift
owl-client-app/Views/: BrowserWindow.swift  MainContentView.swift
owl-client-app/scripts/: build_all.sh  check_architecture_boundaries.py  check_docs_consistency.py  check_flake_trend.py  check_harness_maintenance.py  check_harness_quality.py  check_xcuitest.py  common.sh  harness_policy.json  launch.sh  resign_for_testing.sh  run_harness.py  run_harness_maintenance.sh  run_harness_maintenance_cycle.sh  run_harness_maintenance_pr.sh  run_tests.sh  run_tests_strict_release.sh  setup_harness_maintenance_scheduler.sh  test_cli.sh  (+1 more)
tools/: AGENT.md  github_export.sh  github_publish_batches.sh
(+170 files in other folders)
